--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <input id="open" type="checkbox">
     <label class="open" for="open"></label>
     <div class="card-front">
-        <div class="note">Click to open</div>
+        <div class="note">Happy Valentines day!<br>♥ Please Click me ♥</div>
     </div>
     <div class="card-inside">
-        <div class="text-one">Happy</div>
+        <div class="text-one">Schön das es</div>
         <div class="heart"></div>
         <div class="smile"></div>
         <div class="eyes"></div>
