--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input id="open" type="checkbox">
     <label class="open" for="open"></label>
     <div class="card-front">
-        <div class="note">Happy Valentines day!<br>♥ Please Click me ♥</div>
+        <div class="note">Happy Valentines day!<br>♥ ♥ ♥ <br>Click me </div>
     </div>
     <div class="card-inside">
         <div class="text-one">Schön das es</div>
